minor z-index bugs

--- a/static/css/preferences.css
+++ b/static/css/preferences.css
@@ -1,8 +1,10 @@
 /* Preference form */
 #outer-box {
   position: fixed;
+  overflow-y: scroll;
   width: 100%;
-  z-index: 10000;
+  height: 80%;
+  z-index: 100;
 }
 
 
